# Product-Serving-Test

./: .gitignore  README.md  pyproject.toml
batch-serving/: README.md  airflow.cfg  pyproject.toml
batch-serving-assign/: README.md
batch-serving-assign/dags/: 01-simple-train.py  02-model-selection.py  03-batch-inference.py  04-crawling_weather.py
batch-serving/dags/: 01-assign-simple-train.py  01-bash-operator.py  02-assign-model-selection.py  02-python-operator.py  03-assign-batch-inference.py  03-python-operator-with-context.py  04-assign-crawling_weather.py  04-python-operator-with-jinja.py  05-python-operator-with-slack-noti.py  06-python-operater-test.py  hello_world.py
batch-serving/dags/utils/: slack_notifier.py
docker/: .gitignore
docker/fastapi_postgresql_test/: Makefile  docker-compose.yml
docker/fastapi_postgresql_test/fastapi/: Dockerfile  config.py  database.py  main.py  requirements.txt  router.py
docker/jupyter_test/: Dockerfile  README.md
docker/mysql_test/: README.md
online-serving/: pyproject.toml
online-serving-assign/: .gitignore  README.md  api.py  config.py  main.py  pyproject.toml
online-serving/projects/starter_code/: Dockerfile  README.md  api.py  config.py  database.py  dependency.py  main.py  schemas.py
